feat: Add interactions using native alerts and react-hot-toast

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,8 @@
     "@stackflow/plugin-history-sync": "^1.0.0",
     "@stackflow/plugin-renderer-basic": "^1.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
