--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@stackflow/core": "^1.0.0",
     "@stackflow/plugin-basic-ui": "^1.18.1",
+    "@stackflow/plugin-devtools": "^0.1.11",
     "@stackflow/plugin-history-sync": "^1.0.0",
     "@stackflow/plugin-renderer-basic": "^1.0.0",
     "react": "^18.2.0",
