--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@stackflow/core": "^1.0.0",
     "@stackflow/plugin-basic-ui": "^1.18.1",
     "@stackflow/plugin-devtools": "^0.1.11",
@@ -15,7 +16,9 @@
     "@stackflow/plugin-renderer-basic": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.6.0"
+    "react-hook-form": "^7.69.0",
+    "react-hot-toast": "^2.6.0",
+    "zod": "^4.3.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
