--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@stackflow/plugin-history-sync": "^1.0.0",
     "@stackflow/plugin-preload": "^1.4.4",
     "@stackflow/plugin-renderer-basic": "^1.0.0",
+    "@tanstack/react-query": "^5.90.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.69.0",
